--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,17 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+  <link rel="manifest" href="/assets/images/site.webmanifest">
 </head>
 
-<body>
+<body style="background-color: rgb(58, 58, 74);">
   {% include navigation.html %}
-  <div style="padding: 350px 0 150px 0;">
+  <div style="padding: 300px 0 150px 0;">
     {% if page.url != "/" %}
-    <a href="/" class="homeBtn">&lt; Home</a>
+    <button class="homeBtn" onclick="history.back()">&lt; Back</button>
     {% endif %}
 
     {{ content }}
