--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,21 +6,26 @@
     <a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>
     {% for item in site.data.navigation %}
     {% if item.dropdown == "no" %}
-    <a href="{{ site.baseurl }}/{{ item.link }}" {% if page.url==item.link %} class="navCurrent" {% endif %}>
+    <a href="{{ site.baseurl }}/{{ item.link }}" class="sideLink" {% if page.url==item.link %} class="pageLink navCurrent" {% endif %}>
       {{ item.name }}
     </a>
     {% endif %}
     {% endfor %}
-    <button class="dropdownBtn" style="visibility: hidden;">Projects &#9662;<i class="caret"></i></button>
-    <div class="dropdownBox">
-      {% for item in site.data.navigation %}
-      {% if item.dropdown == "yes" %}
-      <a href="{{ item.link }}" class="dropdownLink" {% if page.url==item.link %} class="navCurrent dropdownLink" {%
-        endif %}>
-        {{ item.name }}
-      </a>
-      {% endif %}
-      {% endfor %}
+    <div class="dropdownContainer" hidden>
+      <button class="dropdownBtn">Projects &#9662;<i class="caret"></i></button>
+      <div class="dropdownBox">
+        {% for item in site.data.navigation %}
+          {% if item.dropdown == "yes" %}
+            <a href="{{ item.link }}" class="dropdownLink" {% if page.url==item.link %} class="navCurrent dropdownLink" {% endif %}>
+            {{ item.name }}
+            </a>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+    <div class="iconBar">
+      <a href="mailto:jacob@waughhoo.com" class="icon" target="_blank" aria-label="Email"><i class="fa-regular fa-envelope fa-lg"></i></a>
+      <a href="https://www.linkedin.com/in/jacobwaugh-/" class="icon" target="_blank" aria-label="LinkedIn page"><i class="fa-brands fa-square-linkedin fa-lg" style="color: #ffffff;"></i></a>
     </div>
   </nav>
 </div>
