--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon/favicon-16x16.png">
   <link rel="manifest" href="{{ site.baseurl }}/assets/images/favicon/site.webmanifest">
+  <script src="https://kit.fontawesome.com/b6fb7581fd.js" crossorigin="anonymous"></script>
 </head>
 
 <body style="background-color: rgb(58, 58, 74);">
