added style pages, updated colors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 <body style="background-color: rgb(215, 215, 215);">
   {% include navigation.html %}
-  <div style="padding: 250px 0 150px 0;">
+  <div style="padding: 15% 0 150px 0;">
     {% if page.url != "/" %}
     <button class="homeBtn" onclick="history.back()">&lt; Back</button>
     {% endif %}
